--- a/index.pug
+++ b/index.pug
@@ -7,10 +7,13 @@ html(lang="en")
 
     body 
         #board(style='width: 400px')
-        button#startBtn Start Position
-        button#move1Btn e2-e4
-        button#move2Btn d2-d4, g8-f6
+        button#clearBtn Start Position
         button#showPositionBtn Show position in console
+        button#moveButton Next move
+
+        p(id="status")
+        p(id="fen")
+        p(id="pgn")
 
         script(src='https://code.jquery.com/jquery-3.5.1.min.js' integrity='sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2' crossorigin='anonymous')
         script(src='https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js' integrity='sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD' crossorigin='anonymous')
