--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,9 @@ html(lang="en")
 
     body 
         #board(style='width: 400px')
+        button#pvpmode PvP
+        button#aimode Play with computer
+
         button#clearBtn Start Position
         button#showPositionBtn Show position in console
         button#moveButton Next move
